Closed Bug 261043 Opened 21 years ago Closed 21 years ago

context menu shortcuts no longer work on Linux or Mac OS X

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: bugzilla, Assigned: yuanyi21)

Details

(Keywords: helpwanted, regression)

Attachments

(2 files)

this has been an issue since at least the 2004091907-trunk builds. not a problem in mozilla 1.8a3 (8/17). to test (eg, make sure focus in within the web page content area): * on Linux hit either shift-F10 or the context menu key (located in the lower-right of PC keyboards, btwn the Windows and Control keys). * on Mac OS X, hit control-spacebar. expected: the context menu should appear for web content (usually in the upper-left of the content area). actual results: the context menu doesn't appear. occaisionally on Mac I can get it to appear after selecting some content, but most of the time that doesn't work. (no js console errors, alas.)
interestingly, not a problem on Windows (Asa's box).
looks like this broke sometime btwn 1.8a3 (8/17) and 2004082507-trunk builds. (sorry, don't have intermediate builds.)
interesting thing: this seems limited to certain windows: * navigator (browser) * sidebar * bookmarks manager * js console but this is not a problem in others: * mailnews 3pane * mail compose * web page compose * history manager * download manager * addressbook window
items in comment 3 tested on linux so far (2004092206-trunk, fedora core 2)...
also appears to fail in various chrome textfields throughout the app.
Aaeon, this may be a 1.8a4 blocker. Can you please take a look at this, ASAP?
Flags: blocking1.8a4+
Asa, this isn't related to the other regressions. It regressed before bug 68841 (accesskey underlining) was checked in. It would be nice if someone more familiar with Mozilla on Linux or Mac could take a look.
Keywords: helpwanted
no idea about the Mac OS X.
Comment on attachment 159828 [details] [diff] [review] don't overwrite the mouse event's eventType Only tested on gtk2 build.
Attachment #159828 - Flags: review?(robin.lu)
Attachment #159828 - Flags: review?(robin.lu) → review+
Attachment #159828 - Flags: superreview?(bryner)
*** Bug 260953 has been marked as a duplicate of this bug. ***
Assignee: aaronleventhal → kyle.yuan
Status: NEW → ASSIGNED
Kyle, any idea why it regressed? What checkin changed things?
Sarah: Asa wants to hunt down a smaller window as to when this might have happened. I can take a look at the Mac builds since you mentioned there were no intermediary builds.
(In reply to comment #13) > Sarah: Asa wants to hunt down a smaller window as to when this might have > happened. I can take a look at the Mac builds since you mentioned there were no > intermediary builds. unless you've got mozilla builds on a machine that are older than 8/25, it might be difficult. unfortunately, the ftp site (ftp://ftp.mozilla.org/pub/mozilla.org/mozilla/nightly/) doesn't have any mozilla builds before 8/25. is there an older repository elsewhere?
(In reply to comment #12) > Kyle, any idea why it regressed? What checkin changed things? Assigning a key event type to a mouse event is always wrong. I think this just gets revealed after someone fixed something.
archive.mozilla.org has older builds.
maybe bz can help with a regression range...
This broke between 2004-08-20-07 and 2004-08-21-08. That's the range when bug 238773 (splitting up nsDOMEvent into multiple classes) landed. ccing people involved in that bug, since I bet that's what caused this one. I agree with comment 15, in any case... any way we can change the event classes to prevent that from being possible?
So is attachment 159828 [details] [diff] [review] still worth reviewing and landing? Time is short on 1.8a4.
As far as I can tell, it's the right fix, yes, but this is not exactly my area of expertise.... And if we want to have context menus usable via keyboard in 1.8a4, then yes it's worth it. I can land it once bryner reviews.
Attachment #159831 - Flags: superreview?(bryner)
Attachment #159831 - Flags: review?(pinkerton)
Thanks Boris. I'll try to help chase down reviews.
Attachment #159828 - Flags: superreview?(bryner) → superreview+
Attachment #159831 - Flags: superreview?(bryner) → superreview+
Comment on attachment 159828 [details] [diff] [review] don't overwrite the mouse event's eventType Requesting 1.8a4 approval.
Attachment #159828 - Flags: approval1.8a4?
Attachment #159828 - Flags: approval1.8a4? → approval1.8a4+
Attachment #159831 - Flags: review?(pinkerton) → review+
Comment on attachment 159831 [details] [diff] [review] same thing for mac Requesting 1.8a4 approval for the mac patch too. I've checked in the Linux one.
Attachment #159831 - Flags: approval1.8a4?
Attachment #159831 - Flags: approval1.8a4? → approval1.8a4+
*** Bug 260953 has been marked as a duplicate of this bug. ***
Mac fix checked in. Marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
with 2004092709-trunk (non-installer, gtk1) on fedora 2, both shift+f10 and the context menu key work now. either marcia or I will check on Mac once a seamonkey build comes out.
Using Mozilla 1.8a4 Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8a4) Gecko/20040927, this now works on the Mac - control-spacebar does bring up the context menu.
thanks for checking, Marcia! vrfy'ing as fixed.
Status: RESOLVED → VERIFIED
Component: Keyboard: Navigation → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: