Fix context menu keyboard shortcut on Linux.  Bug 261043, patch by Kyle Yuan <kyle.yuan@sun.com>, r=robin.lu, sr=bryner, a=dbaron